<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:text="@string/rolling_news"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/office_announcement"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/school_affairs"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/headline_news"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>