<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- todo remove round icon -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/frag_profile_login_avatar"
        android:layout_width="@dimen/frag_profile_login_avatar_diameter"
        android:layout_height="@dimen/frag_profile_login_avatar_diameter"
        android:src="@mipmap/ic_launcher_fzyz_round"
        app:civ_border_color="@color/living_coral"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frag_profile_username_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frag_profile_login_text_margin"
        android:layout_marginEnd="@dimen/frag_profile_login_text_margin"
        android:hint="Username"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_profile_login_avatar"
        app:layout_constraintVertical_bias=".15">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frag_profile_password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frag_profile_login_text_margin"
        android:layout_marginEnd="@dimen/frag_profile_login_text_margin"
        android:hint="Password"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_profile_username_text_layout"
        app:layout_constraintVertical_bias=".1"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        app:passwordToggleTintMode="multiply">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/frag_profile_teacher_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_a_teacher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frag_profile_student_login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_profile_password_text_layout"
        app:layout_constraintVertical_bias=".25" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/frag_profile_student_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_a_student"
        app:layout_constraintBottom_toBottomOf="@+id/frag_profile_teacher_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/frag_profile_teacher_login_button"
        app:layout_constraintTop_toTopOf="@+id/frag_profile_teacher_login_button"
        app:layout_constraintVertical_bias=".25" />

    <Button
        android:id="@+id/frag_profile_public_login_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/public_login"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/frag_profile_teacher_login_button"
        app:layout_constraintStart_toStartOf="@+id/frag_profile_teacher_login_button"
        app:layout_constraintTop_toBottomOf="@+id/frag_profile_teacher_login_button" />

    <Button
        android:id="@+id/frag_profile_register_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/frag_profile_public_login_button"
        app:layout_constraintEnd_toEndOf="@+id/frag_profile_student_login_button"
        app:layout_constraintStart_toStartOf="@+id/frag_profile_student_login_button"
        app:layout_constraintTop_toTopOf="@+id/frag_profile_public_login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>